--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -1,58 +1,56 @@
 <div class="card animated fadeInUp">
   <div class="card-image" align="middle">
-    <img class="card-img" src="https://www.dfilitto.com.br/wp-content/uploads/2015/06/java-logo.png">
+    <!--  <img class="card-img" src=""> -->
   </div>
-  <div class="card-content">
-    <span class="card-title">Java - Fundamentos</span>
-    <p>Este curso apresenta uma visão geral da Linguagem de Programação Java, suas características e funcionamento. São abordados
-      os tipos de dados e o controle do fluxo de execução de programas. Conceitos relacionados com orientação a objetos,
-      tais como classes, herança e polimorfismo são explorados, oferecendo um conjunto sólido de conhecimentos que são a
-      base indispensável para começar a desenvolver sistemas em Java. </p>
+  <div class="card-content" align="middle">
+    <span class="card-title"></span>
+    <p>Preparar o aluno para a condução de trabalhos acadêmico-científicos, no
+      nível de exigência adequado ao curso de graduação ou pós-graduação lato
+      sensu, na área da computação, de modo a facilitar o desenvolvimento de
+      planos e projetos de pesquisa, a elaboração da apresentação do trabalho e
+      a participação na defesa (ou na entrega) final. </p>
   </div>
   <div class="card-tabs">
     <ul class="tabs tabs-fixed-width">
       <li class="tab">
-        <a href="#test4">Características do Curso</a>
+        <a href="#test4">Público Alvo</a>
       </li>
       <li class="tab">
-        <a href="#test5">Competências desenvolvidas</a>
+        <a href="#test5">Competências a Desenvolver</a>
       </li>
       <li class="tab">
-        <a href="#test6">Pré-Requisitos</a>
+        <a href="#test6">Local</a>
       </li>
       <li class="tab">
-        <a href="#test7">Investimento</a>
+        <a href="#test7">Períodos</a>
       </li>
     </ul>
   </div>
   <div class="card-content color">
     <div id="test4">
       <ul class="collection">
-        <li class="collection-item">O curso está dividido em dez sessões, totalizando 40 horas.</li>
-        <li class="collection-item">O curso oferece atividades práticas em laboratório. Cada aluno tem sua própria estação de trabalho.</li>
-        <li class="collection-item">A Escola Superior de Redes oferece material didático exclusivo.</li>
+        <li class="collection-item">Alunos de TCC (PFC I e II) e de Iniciação Científica.</li>
+        <li class="collection-item">Alunos de pós-graduação lato sensu (especialização).</li>
       </ul>
     </div>
     <div id="test5">
       <ul class="collection">
-        <li class="collection-item">Conhecer os tipos de dados, principais comandos e estruturas de controle do Java.</li>
-        <li class="collection-item">Utilizar a plataforma NetBeans e recursos de apoio ao desenvolvimento de programas.</li>
-        <li class="collection-item">Utilizar os conceitos de Programação Orientada a Objetos em Java.</li>
-        <li class="collection-item">Utilizar Classes, métodos, interfaces e expressões Lambda.</li>
-        <li class="collection-item">Aplicar o conceito de Manipulação de Collections em Java.</li>
+        <li class="collection-item">Habilitar-se para atuar em um trabalho de pesquisa.</li>
+        <li class="collection-item">Conhecer os Métodos e as tipificações de pesquisa.</li>
+        <li class="collection-item">Conhecer a Metodologia de Pesquisa para Ciência da Computação.</li>
+        <li class="collection-item">Executar um projeto de pesquisa.</li>
+        <li class="collection-item">Habilitar-se para apresentar e defender um trabalho final de pesquisa.</li>
       </ul>
     </div>
     <div id="test6">
       <ul class="collection">
-        <li class="collection-item">Conhecimentos avançados na utilização de computadores e do sistema operacional Windows.</li>
-        <li class="collection-item">Conhecimento de lógica de programação.</li>
-        <li class="collection-item">Uso dos aplicativos da Internet: correio eletrônico e navegadores.</li>
-        <li class="collection-item">Inglês para leitura.</li>
+        <li class="collection-item">Moodle IPê da UFG.</li>
       </ul>
     </div>
     <div id="test7">
       <ul class="collection">
-        <li class="collection-item">R$ 1.920,00</li>
+        <li class="collection-item">Período de inscrição: 28/04 a 04/05/2017</li>
+        <li class="collection-item">Período de realização: 06/05 a 02/06/2018</li>
       </ul>
     </div>
   </div>
