--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="caption center-align">
           <h3>Centro de Formação Tecnológica do INF</h3>
           <h5 class="light grey-text text-lighten-3">Conheça nossos cursos.</h5>
-          <a class="btn red" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
+          <a class="btn red" [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
         </div>
       </li>
       <li>
@@ -57,7 +57,7 @@
 <div class="container" id="calendar">
     <div class="row">
         <div class="col l6 s12 div-news teste">
-            <div class="news pink darken-4 z-depth-2">
+            <div class="news light-blue darken-3 z-depth-2">
                 <p>Notícias</p>
                 <div class="divider"></div>
                 <div class="section">
