--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,7 @@ h2 {
 .indicator-item.active {
   background-color: #0277bd !important;
 }
+
+.color-footer {
+  background-color: #1f292e !important;
+}
