--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <nav>
   <div class="container nav-wrapper">
-    <a href="#" class="brand-logo"></a>
+    <a href="#" class="brand-logo">CFTI</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse">
       <i class="material-icons">dehaze</i>
     </a>
     <ul class="right hide-on-med-and-down">
       <li>
-        <a class="nav-link " href="#" [routerLink]="['']">Home</a>
+        <a class="nav-link " href="#" [routerLink]="['home']" routerLinkActive="active">Home</a>
       </li>
       <li>
         <a class="nav-link " href="#" [routerLink]="['sobre']" routerLinkActive="active">Sobre</a>
@@ -17,7 +17,7 @@
     </ul>
     <ul id="mobile-demo" class="side-nav">
       <li>
-        <a class="nav-link " href="#" [routerLink]="['home']" routerLinkActive="active">Home</a>
+        <a class="nav-link " href="#" [routerLink]="['']" routerLinkActive="active">Home</a>
       </li>
       <li>
         <a class="nav-link " href="#" [routerLink]="['sobre']" routerLinkActive="active">Sobre</a>
@@ -31,31 +31,47 @@
 
 <router-outlet></router-outlet>
 
+<div class="white">
+  <div class="divider"></div>
+  <div class="container">
+    <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
+      <div class="col offset-l2 l3 offset-m1 m3 s12">
+        <img src="assets/logoinf.png" style="max-width:12rem">
+      </div>
+      <div class="col offset-l2 l3 offset-m1 m3 s12">
+        <img src="assets/logoapoema.png" style="max-width:12rem">
+      </div>
+    </div>
+  </div>
+</div>
+
 <footer class="page-footer">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-          <img src="assets/logo.jpg">
+        <img src="">
         <h5 class="white-text">Centro de Formação Tecnológica do INF</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <p class="grey-text text-lighten-4">Um breve conteúdo do rodapé ficará aqui.</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
         <ul>
           <li>
-            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['']" routerLinkActive="active">Home</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['sobre']" routerLinkActive="active">Sobre</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
-          </li>
-          <li>
-            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
           </li>
         </ul>
       </div>
+    </div>
+  </div>
+  <div class="footer-copyright color-footer">
+    <div class="container">
+      © Criado por APOEMA/INF - 2018
     </div>
   </div>
 </footer>
