passing data to child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,10 +36,14 @@
   <div class="container">
     <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
       <div class="col offset-l2 l3 offset-m1 m3 s12">
-        <img src="assets/logoinf.png" style="max-width:12rem">
+        <a href="http://www.inf.ufg.br" target="_blank">
+          <img src="assets/logoinf.png" style="max-width:12rem">
+        </a>
       </div>
       <div class="col offset-l2 l3 offset-m1 m3 s12">
-        <img src="assets/logoapoema.png" style="max-width:12rem">
+        <a href="http://apoema.inf.ufg.br" target="_blank">
+          <img src="assets/logoapoema.png" style="max-width:12rem">
+        </a>
       </div>
     </div>
   </div>
@@ -48,12 +52,11 @@
 <footer class="page-footer">
   <div class="container">
     <div class="row">
-      <div class="col l6 s12">
-        <img src="">
-        <h5 class="white-text">Centro de Formação Tecnológica do INF</h5>
-        <p class="grey-text text-lighten-4">Um breve conteúdo do rodapé ficará aqui.</p>
+      <div class="col l6 s12" align="middle">
+        <img src="assets/logocfti.png" style="width: 250px; height: 70px;">
+        <p class="grey-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2° Andar, Sala 244 - APOEMA</p>
       </div>
-      <div class="col l4 offset-l2 s12">
+      <div class="col l2 s12" align="right">
         <h5 class="white-text">Links</h5>
         <ul>
           <li>
@@ -64,6 +67,34 @@
           </li>
           <li>
             <a class="grey-text text-lighten-3 " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col l2 s12" align="right">
+        <h5 class="white-text">Parceiros</h5>
+        <ul>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro1</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro2</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro3</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col l2 s12" align="right">
+        <h5 class="white-text">Contato</h5>
+        <ul>
+          <li>
+            cfti@inf.ufg.br
+          </li>
+          <li>
+            (62) 3521-1724
+          </li>
+          <li>
+            (62) 3521-1505
           </li>
         </ul>
       </div>
