--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,14 +13,14 @@
         <div class="caption left-align">
           <h3>Não fique perdido no calendário</h3>
           <h5>Salve a data</h5>
-          <a class="btn blue" href="#calendar">Calendário</a>          
+          <button class="btn blue goto" type="button">Calendário</button>          
         </div>
       </li>
       <li>
         <img src="assets/slide3.jpg"> <!-- random image -->
         <div class="caption right-align">
             <h3>Fique por dentro das notícias</h3>
-            <a class="btn purple" href="#calendar">Notícias</a>  
+            <button class="btn purple goto" type="button">Notícias</button>   
         </div>
       </li>
       <li>
