--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -4,11 +4,7 @@
   </div>
   <div class="card-content" align="middle">
     <span class="card-title"></span>
-    <p>Preparar o aluno para a condução de trabalhos acadêmico-científicos, no
-      nível de exigência adequado ao curso de graduação ou pós-graduação lato
-      sensu, na área da computação, de modo a facilitar o desenvolvimento de
-      planos e projetos de pesquisa, a elaboração da apresentação do trabalho e
-      a participação na defesa (ou na entrega) final. </p>
+    <p>{{curso.resumo}}</p>
   </div>
   <div class="card-tabs">
     <ul class="tabs tabs-fixed-width">
@@ -29,28 +25,23 @@
   <div class="card-content color">
     <div id="test4">
       <ul class="collection">
-        <li class="collection-item">Alunos de TCC (PFC I e II) e de Iniciação Científica.</li>
-        <li class="collection-item">Alunos de pós-graduação lato sensu (especialização).</li>
+        <li class="collection-item">{{curso.publicoAlvo}}</li>
       </ul>
     </div>
     <div id="test5">
       <ul class="collection">
-        <li class="collection-item">Habilitar-se para atuar em um trabalho de pesquisa.</li>
-        <li class="collection-item">Conhecer os Métodos e as tipificações de pesquisa.</li>
-        <li class="collection-item">Conhecer a Metodologia de Pesquisa para Ciência da Computação.</li>
-        <li class="collection-item">Executar um projeto de pesquisa.</li>
-        <li class="collection-item">Habilitar-se para apresentar e defender um trabalho final de pesquisa.</li>
+        <li class="collection-item">{{curso.competenciasDesenvolver}}</li>
       </ul>
     </div>
     <div id="test6">
       <ul class="collection">
-        <li class="collection-item">Moodle IPê da UFG.</li>
+        <li class="collection-item">{{curso.local}}</li>
       </ul>
     </div>
     <div id="test7">
       <ul class="collection">
-        <li class="collection-item">Período de inscrição: 28/04 a 04/05/2017</li>
-        <li class="collection-item">Período de realização: 06/05 a 02/06/2018</li>
+        <li class="collection-item">Período de inscrição: {{curso.periodoInscricao}}</li>
+        <li class="collection-item">Período de realização: {{curso.periodoRealizacao}}</li>
       </ul>
     </div>
   </div>
