--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -24,7 +24,7 @@
       </li>
     </ul>
   </div>
-  <div class="col s12 l8">
+  <div id="parte-curso" class="col s12 l8">
     <app-desenvolvimento [curso]=curso></app-desenvolvimento>
   </div>
 </div>
