--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -1,9 +1,6 @@
 <div class="card animated fadeInUp">
-  <div class="card-image" align="middle">
-    <!--  <img class="card-img" src=""> -->
-  </div>
   <div class="card-content" align="middle">
-    <span class="card-title"></span>
+    <span class="card-title">{{curso.nome}}</span>
     <p>{{curso.resumo}}</p>
   </div>
   <div class="card-tabs">
