--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -12,7 +12,10 @@
         <a href="#test5">Competências a Desenvolver</a>
       </li>
       <li class="tab">
-        <a href="#test6">Local</a>
+        <a href="#test6">Modalidade e Local</a>
+      </li>
+      <li class="tab">
+        <a href="#test8">Conteúdo</a>
       </li>
       <li class="tab">
         <a href="#test7">Períodos</a>
@@ -32,6 +35,7 @@
     </div>
     <div id="test6">
       <ul class="collection">
+        <li class="collection-item">{{curso.modalidade}}</li>
         <li class="collection-item">{{curso.local}}</li>
       </ul>
     </div>
@@ -39,6 +43,11 @@
       <ul class="collection">
         <li class="collection-item">Período de inscrição: {{curso.periodoInscricao}}</li>
         <li class="collection-item">Período de realização: {{curso.periodoRealizacao}}</li>
+      </ul>
+    </div>
+    <div id="test8">
+      <ul class="collection">
+          <li class="collection-item">Conteúdo aqui.</li>
       </ul>
     </div>
   </div>
