adicionando modalidade e conteudo

--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -25,12 +25,12 @@
   <div class="card-content color">
     <div id="test4">
       <ul class="collection">
-        <li class="collection-item">{{curso.publicoAlvo}}</li>
+        <p id="publico" class="collection-item">{{curso.publicoAlvo}}</p>
       </ul>
     </div>
     <div id="test5">
       <ul class="collection">
-        <li class="collection-item">{{curso.competenciasDesenvolver}}</li>
+        <p id="competencias" class="collection-item">{{curso.competenciasDesenvolver}}</p>
       </ul>
     </div>
     <div id="test6">
@@ -47,7 +47,7 @@
     </div>
     <div id="test8">
       <ul class="collection">
-          <li class="collection-item">Conteúdo aqui.</li>
+          <p id="conteudo" class="collection-item"></p>
       </ul>
     </div>
   </div>
