--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,19 +1,34 @@
+<div class="row" style="margin-top: 10px">
+  <div class="col s6">
+    
+  </div>
+  <form class="col s6">
+    <div class="input-field">
+      <i class="material-icons prefix">search</i>
+      <input id="icon_prefix" type="text" class="validate" [(ngModel)] = "pesquisa" name="pesquisa">
+      <label for="icon_prefix2">Pesquisar</label>
+    </div>
+  </form>
+</div>
 <div class="row">
   <div class="col s12 l4">
     <ul materialize="collapsible" class="collapsible" data-collapsible="expandable">
-      <li *ngFor = "let categoria of categorias">
+      <li *ngFor="let categoria of categorias">
         <div class="collapsible-header">
           <i class="material-icons">{{categoria.icon}}</i>{{categoria.nome}}</div>
         <div class="collapsible-body">
           <div class="collection">
             <ul materialize="collapsible" class="collapsible" data-collapsible="expandable">
-              <li *ngFor = "let subcategoria of subcategorias">
+              <li *ngFor="let subcategoria of subcategorias">
                 <div class="collapsible-header">
                   <i class="material-icons">{{subcategoria.icon}}</i>{{subcategoria.nome}}</div>
                 <div class="collapsible-body">
                   <div class="collection">
                     <div *ngFor="let curso of cursos" style="cursor: pointer">
-                      <a id="curso-nome" class="collection-item" *ngIf="curso.categoria == categoria.nome && curso.subcategoria == subcategoria.nome" (click)="findCurso(curso)">{{curso.nome}}</a>
+                      <div *ngIf = "curso.nome && (curso.nome.match(pesquisa) || curso.local.match(pesquisa) || curso.modalidade.match(pesquisa))" >
+                        <a id="curso-nome" class="collection-item" *ngIf="curso.categoria == categoria.nome && curso.subcategoria == subcategoria.nome"
+                        (click)="findCurso(curso)">{{curso.nome}}</a>
+                      </div>
                     </div>
                   </div>
                 </div>
