aplicando página de templates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
       <li>
         <a class="nav-link " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
       </li>
+      <li>
+        <a class="nav-link " href="#" [routerLink]="['templates']" routerLinkActive="active">Templates</a>
+      </li>
 
     </ul>
     <ul id="mobile-demo" class="side-nav">
@@ -27,6 +30,9 @@
       </li>
       <li>
         <a class="nav-link " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
+      </li>
+      <li>
+        <a class="nav-link " href="#" [routerLink]="['templates']" routerLinkActive="active">Templates</a>
       </li>
     </ul>
   </div>
@@ -70,6 +76,9 @@
           </li>
           <li>
             <a class="grey-text text-lighten-3 " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['templates']" routerLinkActive="active">Templates</a>
           </li>
         </ul>
       </div>
