--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,3 +91,12 @@ h2 {
 .color-footer {
   background-color: #263238 !important;
 }
+
+.sobre-titulo {
+  color: #0277bd;
+  font-weight: bold;
+}
+
+.sobre-texto {
+  color: #263238;
+}
