Ajustes de tela e arquitetura

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
       </div>
       <div class="col offset-l2 l3 offset-m1 m3 s12">
         <a href="http://apoema.inf.ufg.br" target="_blank">
-          <img src="assets/logoapoema.png" style="max-width:12rem">
+          <img src="assets/Untitled.png" style="max-width:8rem">
         </a>
       </div>
     </div>
