--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <img src="assets/slide4.jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>Centro de Formação Tecnológica do INF</h3>
-          <h5 class="light grey-text text-lighten-3">Conheça nossos cursos.</h5>
+          <h5 class="light footer-text text-lighten-3">Conheça nossos cursos.</h5>
           <a class="btn red" [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
         </div>
       </li>
@@ -27,7 +27,7 @@
         <img style="filter: brightness(60%)" src="assets/slide1.jpg"> <!-- random image -->
         <div class="caption left-align">
           <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h5 class="light footer-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
     </ul>
