--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="container nav-wrapper">
 
-    <a href="#" class="brand-logo">CFTI</a>
+    <a href="#" class="brand-logo"><img src="assets/logocfti.png" width="160px"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse">
       <i class="material-icons">dehaze</i>
     </a>
@@ -46,7 +46,7 @@
     <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
       <div class="col offset-l2 l3 offset-m1 m3 s12">
         <a href="http://www.inf.ufg.br" target="_blank">
-          <img src="assets/logoinf.png" style="max-width:12rem">
+          <img align-items="center" src="assets/logoinf.png" style="max-width:12rem">
         </a>
       </div>
       <div class="col offset-l2 l3 offset-m1 m3 s12">
@@ -62,50 +62,50 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12" align="middle">
-        <img src="assets/logocfti.png" style="width: 250px; height: 70px;">
-        <p class="grey-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2° Andar, Sala 244 - APOEMA</p>
+        <img src="assets/logocfti.png" width="200px">
+        <p class="footer-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2° Andar, Sala 244 - APOEMA</p>
       </div>
       <div class="col l2 s12" align="right">
-        <h5 class="white-text">Links</h5>
+        <h5 class="footer-title-text">Links</h5>
         <ul>
           <li>
-            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['']" routerLinkActive="active">Home</a>
+            <a class="footer-text text-lighten-3 " href="#" [routerLink]="['']" routerLinkActive="active">Home</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['sobre']" routerLinkActive="active">Sobre</a>
+            <a class="footer-text text-lighten-3 " href="#" [routerLink]="['sobre']" routerLinkActive="active">Sobre</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
+            <a class="footer-text text-lighten-3 " href="#" [routerLink]="['cursos']" routerLinkActive="active">Cursos</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3 " href="#" [routerLink]="['templates']" routerLinkActive="active">Templates</a>
+            <a class="footer-text text-lighten-3 " href="#" [routerLink]="['templates']" routerLinkActive="active">Templates</a>
           </li>
         </ul>
       </div>
       <div class="col l2 s12" align="right">
-        <h5 class="white-text">Parceiros</h5>
+        <h5 class="footer-title-text">Parceiros</h5>
         <ul>
           <li>
-            <a class="grey-text text-lighten-3 " href="#">Parceiro1</a>
+            <a class="footer-text text-lighten-3 " href="#">Parceiro1</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3 " href="#">Parceiro2</a>
+            <a class="footer-text text-lighten-3 " href="#">Parceiro2</a>
           </li>
           <li>
-            <a class="grey-text text-lighten-3 " href="#">Parceiro3</a>
+            <a class="footer-text text-lighten-3 " href="#">Parceiro3</a>
           </li>
         </ul>
       </div>
       <div class="col l2 s12" align="right">
-        <h5 class="white-text">Contato</h5>
+        <h5 class="footer-title-text">Contato</h5>
         <ul>
-          <li>
+          <li class="footer-title-text">
             cfti@inf.ufg.br
           </li>
-          <li>
+          <li class="footer-title-text">
             (62) 3521-1724
           </li>
-          <li>
+          <li class="footer-title-text">
             (62) 3521-1505
           </li>
         </ul>
