adcionando curso matrizes, algoritmos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,12 +62,18 @@
                 <div class="divider"></div>
                 <div class="section">
                     <div class="row left-align">
-                        <a href="#" class="title-news">Title</a>
+                        <a href="#" class="title-news">Matrizes, Algoritmos e Otimização Linear: Uma Abordagem Remota
+                             e Interativa</a>
                     </div>
-                    <p class="conte-news left-align">Content</p>
+                    <p class="conte-news left-align">Um curso que visa contribuir na capacitação dos estudantes frente
+                         a disciplinas de Fundamentos Matemáticos para Computação, Álgebra Linear, Algoritmos e
+                          Programação, e Pesquisa Operacional. Nele será abordado: operações com matrizes;
+                           sistemas de equações lineares; algoritmos para operações básicas com matrizes;
+                            modelos matemáticos para problemas de otimização e técnicas básicas na resolução 
+                            de problemas de otimização!</p>
                 </div>
                 <div class="divider"></div>
-                <div class="section">
+                <!--<div class="section">
                     <div class="row left-align">
                         <a href="#" class="title-news">Title</a>
                     </div>
@@ -79,7 +85,7 @@
                         <a href="#" class="title-news">Title</a>
                     </div>
                     <p class="conte-news left-align">Content</p>
-                </div>
+                </div>-->
                 <div class="divider"></div>
             </div>
         </div>
