adição de cursos

--- a/src/app/cursos/desenvolvimento/desenvolvimento.component.html
+++ b/src/app/cursos/desenvolvimento/desenvolvimento.component.html
@@ -9,6 +9,9 @@
         <a href="#test4">Público Alvo</a>
       </li>
       <li class="tab">
+        <a href="#test9">Pré Requisitos</a>
+      </li>
+      <li class="tab">
         <a href="#test5">Competências a Desenvolver</a>
       </li>
       <li class="tab">
@@ -28,6 +31,11 @@
         <p id="publico" class="collection-item">{{curso.publicoAlvo}}</p>
       </ul>
     </div>
+    <div id="test9">
+      <ul class="collection">
+        <p id="publico" class="collection-item">{{curso.preRequisitos}}</p>
+      </ul>
+    </div>
     <div id="test5">
       <ul class="collection">
         <p id="competencias" class="collection-item">{{curso.competenciasDesenvolver}}</p>
@@ -42,14 +50,15 @@
     <div id="test7">
       <ul class="collection">
         <li class="collection-item">
-          <div class="row" style="display: flex; align-items: center">
+          <p id="publico" class="collection-item">{{curso.periodoInscricao}}</p>
+          <!--<div class="row" style="display: flex; align-items: center">
             <div class="col s6">
               {{curso.periodoInscricao}}
             </div>
             <div class="col s6" align="right">
               <a class="waves-effect waves-light btn" href="https://goo.gl/forms/zYe3k6jR7uiHMJsE2" target="_blank">Inscreva-se</a>
             </div>
-          </div>
+          </div>-->
         </li>
         <li class="collection-item">
           <div class="row" style="display: flex; align-items: center">
